--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       {{#each albums.items}}
       <div class='album'>
         <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="albumimg"></div>
-        <div class='album'>Album</div>
+        <div class='album-title'>Album</div>
         <div class='artist'>Artist</div>
       </div>
     {{/each}}
