--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="main-view" >
             <div class="spacer"></div>
             <section class='contentSpacing'>
-                /*<div class='recplaygrid'>
+                <!--<div class='recplaygrid'>
                     <h2 class='recplay'>Recently played</h2>
                     <div class='albumone'>
                       <image class='albumimg' src='images/music.png'/>
@@ -63,7 +63,7 @@
                       <div class='album'>Album</div>
                       <div class='artist'>Artist</div>
                     </div>
-                </div>*/
+                </div>-->
                 <div class='new-rel-grid'>
                   <h2 class='new-rel-title'>New Releases</h2>
                   <div id='new-releases'></div>
