--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <script id="new-releases-template" type="text/x-handlebars-template">
       {{#each albums.items}}
       <div class='album'>
-        <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="albumimg"></div>
+        <img src="{{images.0.url}}" data-album-id="{{id}}" class="albumimg"/>
         <div class='album-title'>Album</div>
         <div class='artist'>Artist</div>
       </div>
