--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       {{#each albums.items}}
       <div class='album'>
         <img src="{{images.0.url}}" data-album-id="{{id}}" class="albumimg"/>
-        <div data-album-id="{{name}}" class='album-title'></div>
+        <div data-album-name="{{name}}" class='album-title'>{{display_name}}</div>
         <div class='artist'>Artist</div>
       </div>
     {{/each}}
