--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </ul>
           </div>
           <div class="now-playing">
-              <image class="now-playing-img" src="images/music.png"/>
+              <image class="now-playing-img" src=""/>
           </div>
           <div class="main-view" >
             <div class="spacer"></div>
