--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </script>
 
     <script id="new-releases-template" type="text/x-handlebars-template">
-      {{#each (limit albums.items 4)}}
+      {{#each albums.items}}
       <div class='album'>
         <img src="{{images.0.url}}" data-album-id="{{id}}" class="albumimg"/>
         <div data-album-id="{{id}}" class='album-title'>{{name}}</div>
