--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Avalanche</title>
-    
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel='stylesheet' href='style.css'>
     
   </head>
@@ -31,9 +31,12 @@
                     <div class="nav-bar-items"><a class="nav-bar-link">Discover</a></div>
                 </li>
                 <li>
-                    <div class="nav-bar-items"><a class="nav-bar-link">Feed</a></div>
+                    <div class="nav-bar-items"><a class="nav-bar-link">Explore Feed</a></div>
                 </li>
                 <div class='nav-divider'></div>
+                <li>
+                  <div class="nav-bar-items"><a class="nav-bar-link">Recently Played</a></div>
+                </li>
                 <li>
                   <div class="nav-bar-items"><a class="nav-bar-link">Favorites</a></div>
                 </li>
