Added offical logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </header>
           </div>
           <div class="nav-bar">
-            <div class="logo">Avalanche</div>
+            <div class="logo-section">
+              <img src="images/logo-w.png" class="logoimg">
+              <div class="logo">Avalanche</div>
+            </div>
             <ul>
                 <li>
                     <div class="nav-bar-items"><a class="nav-bar-link-active">Home</a></div>
