--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Avalanche</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel='stylesheet' href='style.css'>
-    
+    <link rel='icon' src='images/logo-pw.png'>
   </head>
 
   <body>
