--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Avalanche</title>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <link rel='stylesheet' href='style.css'>
     <link rel='icon' type='image/png' href='images/logo-pw.png'>
   </head>
@@ -56,7 +57,7 @@
             </ul>
           </div>
           <div class="now-playing">
-              <image class="now-playing-img" src=""/>
+              <img class="now-playing-img" src="">
           </div>
           <div class="main-view" >
             <div class="spacer"></div>
