--- a/stylesheet.html
+++ b/stylesheet.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
 	<title>CSC 3380 Project</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="sheet.css">
 </head>
 <body>
 	<p class="text">Hello</p>
