--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class='album'>
         <img src="{{images.0.url}}" data-album-id="{{id}}" class="albumimg"/>
         <div data-album-id="{{id}}" class='album-title'>{{name}}</div>
-        <div data-album-id="{{id}}" class='artist'>{{artists}}</div>
+        <div data-album-id="{{id}}" class='artist-name'>{{artists}}</div>
       </div>
       {{/each}}
     </script>
