Artist name displayed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class='album'>
         <img src="{{images.0.url}}" data-album-id="{{id}}" class="albumimg"/>
         <div data-album-id="{{id}}" class='album-title'>{{name}}</div>
-        <div data-artists-id="{{id}}" class='artist-name'>{{artists[0].name}}</div>
+        <div data-artists-id="{{id}}" class='artist-name'>{{artists.0.name}}</div>
       </div>
       {{/each}}
     </script>
