Creating login screen

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <div id='recently-played'></div>
             </div>
             <!-- Ethan's workspace ends here-->
+            <a href='test.html'>Test</a>
           </section>
           <section id='discover-content'>
           <div class='new-rel-grid'>
