--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
         </section>
         <section id='following-content'>
           <!-- Nick's workspace -->
+          <div class='new-rel-grid'>
+            <h2 class='new-rel-title'>Artists Following</h2>
+            <div id='Following'></div>
+          </div>
+          <br>
+          <!-- Nick's workspace ends -->
 
         </section>
       </div>
