--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
           <!-- Nick's workspace -->
           <div class='new-rel-grid'>
             <h2 class='new-rel-title'>Artists Following</h2>
-            <div id='Following'></div>
+            <hr>
+            <div id='following'></div>
           </div>
           <br>
           <!-- Nick's workspace ends -->
