--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
             <div id='recently-played'></div>
           </div>
           <!-- Ethan's workspace ends here-->
-          <a href='test.html'>Test</a>
         </section>
         <section id='discover-content'>
         <div class='new-rel-grid'>
@@ -155,7 +154,7 @@
     {{/each}}
     {{else}}
     </div>
-    <div class='none'>You public playlists will appear here.</div>
+    <div class='none'>Your public playlists will appear here.</div>
     {{/if}}
   </script>
   <!-- Patrick's workspace ends here -->
@@ -170,7 +169,7 @@
     </div>
     {{/each}}
   
-  </script>>
+  </script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
