--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <div class="spacer"></div>
         <section id='home-content'>
           <!-- Peyton's workspace -->
-            
+
+          <!-- Peyton's workspace ends here-->
           <!-- Ethan's workspace -->
           <div class='rec-play-grid'>
             <h2 class='rec-play-title'>Recently Played</h2>
@@ -77,7 +78,7 @@
           <h2>Recommendation</h2>
           <div id='recommendation'></div>
         </div>
-          <!-- Tracy's workspace ends here-->
+        <!-- Tracy's workspace ends here-->
         </section>
         <section id='browse-content'>
               
@@ -91,7 +92,7 @@
         </section>
         <!-- Patrick's Workspace ends here -->
         <section id='favorites-content'>
-          <div>favorites</div>
+          <h2>Favorites</h2>
         </section>
         <!-- Nick's workspace -->
         <section id='following-content'>
@@ -100,9 +101,8 @@
             <div id='following'></div>
           </div>
           <br>
-          <!-- Nick's workspace ends -->
-
         </section>
+        <!-- Nick's workspace ends -->
       </div>
     </div>
   </div>
@@ -168,9 +168,8 @@
       <img src="{{images.0.url}}" class="fol-art-img"/>
     </div>
     {{/each}}
-  
   </script>
-
+  <!-- Nick's workspace ends here -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src='style.js'></script>
