--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
           </li>
         </ul>
       </div>
+      <!-- Music Player -->
       <div class="now-playing">
         <div id='now-playing'></div>
       </div> 
+      <!-- Music Player ends here -->
       <div class="main-view" >
         <div class="spacer"></div>
         <section id='home-content'>
@@ -88,6 +90,7 @@
           <div class='library-grid'>
             <h2 class='library-title'>My Library</h2>
             <div id='lib-playlist'></div>
+            <a href='test.html'>TEST PAGE</a>
           </div>
         </section>
         <!-- Patrick's Workspace ends here -->
@@ -125,18 +128,19 @@
     </div>
     {{/each}}
   </script>
+  <!-- Music Player -->
   <script id="now-playing-template" type="text/x-handlebars-template">
     <div class='now'>
       <img class="now-playing-img" src="{{item.album.images.0.url}}">
+      <div class="playback-bar__progress-time">{{progress_ms}}</div>
       <div class='progress-bar'></div>
-      <div class='start-time'></div>
-      <div class='end-time'></div>
       <div class='play' hidden></div>
       <div class='pause' hidden></div>
       <p class='np-song-name'>{{item.album.artists.0.name}}</p>
-      <p class='np-artist-name'>{{item.name}}</p>
+      <p id="garbage" class='np-artist-name'>{{item.name}}</p>
     </div>
   </script>
+  <!-- Music Player ends here -->
   <!-- Ethan's workspace -->
 
   <!-- Tracy's workspace -->
@@ -174,5 +178,6 @@
   <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src='style.js'></script>
   <script src='app.js'></script>
+  <script src='test.js'></script>
   </body>
 </html>
