Ethan's Workspace (recentlyplayed)
I did that shit.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
     </div>
   </script>
   <!-- Ethan's workspace -->
+  <script id ='recently-played-template' type="text/x-handlebars-template">
+    <div id='recently-played-playlist'></div>
+    
+  </script>
 
   <!-- Tracy's workspace -->
 
