--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
           <div class='library-grid'>
             <h2 class='library-title'>My Library</h2>
             <div id='lib-playlist'></div>
-            <a href='test.html'>TEST PAGE</a>
           </div>
         </section>
         <!-- Patrick's Workspace ends here -->
@@ -138,7 +137,7 @@
       <div class='play' hidden></div>
       <div class='pause' hidden></div>
       <p class='np-song-name'>{{item.album.artists.0.name}}</p>
-      <p id="garbage" class='np-artist-name'>{{item.name}}</p>
+      <p id="" class='np-artist-name'>{{item.name}}</p>
     </div>
   </script>
   <!-- Music Player ends here -->
