Ethan's Workspace (featured playlists)
I did that shit too.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
           <!-- Peyton's workspace ends here-->
           <!-- Ethan's workspace -->
+          <div class='feat-playlists-grid'>
+            <h2 class='feat-playlists-title'>Recently Played</h2>
+            <div id='feat-playlists'></div>
+          </div>
+
           <div class='rec-play-grid'>
             <h2 class='rec-play-title'>Recently Played</h2>
             <div id='recently-played'></div>
@@ -138,9 +143,13 @@
     </div>
   </script>
   <!-- Ethan's workspace -->
+
   <script id ='recently-played-template' type="text/x-handlebars-template">
     <div id='recently-played-playlist'></div>
-    
+  </script>
+
+  <script id ='featured-playlists-template' type="text/x-handlebars-template">
+    <div id='featured-playlists'></div>
   </script>
 
   <!-- Tracy's workspace -->
