Ethan's Workspace (featured playlists)
Corrections. (Version 2.0)

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
           <!-- Peyton's workspace ends here-->
           <!-- Ethan's workspace -->
-          <div class='feat-playlists-grid'>
-            <h2 class='feat-playlists-title'>Recently Played</h2>
-            <div id='feat-playlists'></div>
+          <div class='featured-playlists-grid'>
+            <h2 class='featured-playlists-title'>Recently Played</h2>
+            <div id='featured-playlists'></div>
           </div>
 
           <div class='rec-play-grid'>
@@ -149,7 +149,7 @@
   </script>
 
   <script id ='featured-playlists-template' type="text/x-handlebars-template">
-    <div id='featured-playlists'></div>
+    <div id='featured-playlists-playlist'></div>
   </script>
 
   <!-- Tracy's workspace -->
