--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <div class='library-grid'>
             <h2 class='library-title'>My Library</h2>
             <div id='lib-playlist'></div>
+            <h2 class='tracks-title'>My Tracks</h2>
           </div>
         </section>
         <!-- Patrick's Workspace ends here -->
